# Lockfree

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
include/lockfree/: maybe.hpp  queue.hpp
mocks/: consumer_producer_dummies.hpp  mutex_based_reference_queue.hpp
tests/: lockfree_queue_bench.cpp  lockfree_queue_test.cpp  multithread_queue_test.cpp  singlethread.cpp  singlethread_queue_test.cpp
